# Analytical-SalesForce

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  frontend.html  index.html  main.py  pyproject.toml  requirements-hf.txt  requirements.txt  teste_salesforce_auth.py  vercel.json
examples/: sample_payload.json
frontend-react/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1783555732652-8275924e87ed8.mjs
frontend-react/src/: App.jsx  api.js  format.js  style.css
prompts/: report_prompt.md  system_prompt.md
scripts/: clean_db.py  generate_salesforce_refresh_token.py  test_gmail_oauth.py  test_salesforce_oauth.py
src/: __init__.py
src/agent/: __init__.py  analytical_force_agent.py  prompt_builder.py  report_generator.py
src/analytics/: __init__.py  cancellation_metrics.py  comparison_metrics.py  contract_metrics.py  lead_metrics.py  opportunity_metrics.py  risk_engine.py  satisfaction_metrics.py  task_metrics.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  migrations.py  repositories.py  turso_client.py
src/delivery/: __init__.py  clickup_sender.py  email_sender.py  file_writer.py
src/models/: __init__.py  hf_inference_client.py  model_router.py  ollama_client.py  template_client.py  transformers_client.py
src/query/: __init__.py  search_service.py
src/salesforce/: __init__.py  client.py  extractors.py  field_mapping.py  queries.py  search.py  search_sync.py
src/utils/: __init__.py  (+3 more)
workflows/: agendamento_local.md  github_actions_daily.yml
(+21 files in other folders)
